tests/invalid/annotation_list_none_element/main.py
def run_case() -> None:
    bad: list[None] = []


if __name__ == "__main__":
    run_case()
